mixed share file and share with modals into one

--- a/src/angular/cooldrive/src/app/components/files/files.component.css
+++ b/src/angular/cooldrive/src/app/components/files/files.component.css
@@ -66,5 +66,25 @@
 }
 
 #publicLink{
-  padding-top: 8px;
+  padding-top: 0.3px;
+}
+
+.shareButton{
+  width: 97px;
+}
+
+.form-check{
+  display: inline-block;
+}
+
+.selectAccess{
+  text-align: center;
+}
+
+.sharedWith{
+  text-align: center;
+}
+
+.modal-body{
+  padding-bottom: 3px;
 }
