added align for icon

--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -293,7 +293,7 @@
               <span class="input-group-btn">
                 <button id="shareButton" type="button" class="btn btn-primary shareButton"
                         [disabled]="shareFileForm.invalid" (click)="share()"><span
-                  class="glyphicon glyphicon-send"></span> Share</button>
+                  class="glyphicon glyphicon-send icon-align"></span> Share</button>
               </span>
             </div>
             <div class="selectAccess">
