added "No Files Found" warning if files list is empty

--- a/src/angular/cooldrive/src/app/components/files/files.component.css
+++ b/src/angular/cooldrive/src/app/components/files/files.component.css
@@ -92,3 +92,9 @@
 .icon-align{
   padding-right: 5px;
 }
+
+.no-files-found{
+  padding-bottom: 0;
+  text-transform: capitalize;
+  font-size: 17px;
+}
