--- a/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.css
+++ b/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.css
@@ -33,3 +33,9 @@
 .modal-content{
   margin-top: 190px;
 }
+
+.no-files-found{
+  padding-bottom: 0;
+  text-transform: capitalize;
+  font-size: 17px;
+}
