--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -23,7 +23,7 @@
     </thead>
 
     <tbody id="FileListDisplay">
-    <tr *ngIf="currentFolderId != -1">
+    <tr *ngIf="filteredFiles != 0 && currentFolderId != -1">
       <td>
         <div style="cursor: pointer" (dblclick)="openFolder(-1, '...')"><span
           class="glyphicon glyphicon-folder-close"></span> ...
@@ -74,8 +74,11 @@
     </tbody>
 
   </table>
-  <div *ngIf="filteredFiles == 0"class="alert alert-info" role="alert">
-    <div class="no-files-found">No Files Found!</div>
+  <div *ngIf="filteredFiles == 0 && currentFolderId != -1"class="alert alert-info" role="alert">
+    <div class="no-files-found">No Files Found! Click
+        <a id="back-no-files" (click)="openFolder(-1, '...');">HERE</a>
+      to return to the main folder
+    </div>
   </div>
 
 
