--- a/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.css
+++ b/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.css
@@ -36,6 +36,10 @@
 
 .no-files-found{
   padding-bottom: 0;
-  text-transform: capitalize;
   font-size: 17px;
+}
+
+#back-no-files{
+  cursor: pointer;
+  font-weight: bold;
 }
