default size value is now 0.01

--- a/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.html
+++ b/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.html
@@ -65,7 +65,7 @@
     </div>
   </a>
   <div *ngIf="filteredFiles == 0 && currentFolderId == -1" class="alert alert-info" role="alert">
-    <div class="no-files-found">No files found!</div>
+    <div class="no-files-found">Currently nothing shared with you ¯\_(ツ)_/¯</div>
   </div>
 
   <!-- EDIT TEXT FILE MODAL -->
