--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -58,8 +58,23 @@
 <!-- Left navigation menu -->
 <div class="container-fluid">
   <div class="row">
-    <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+    <nav class="col-sm-3 col-md-2 col-xs-2 bg-faded sidebar">
       <ul class="nav nav-pills flex-column">
+
+        <div *ngIf="matchUrlPath('/dashboard/files')" class="btn-group dropdown createButtonSidebar">
+          <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            New
+          </button>
+          <div class="dropdown-menu createButtonDropDownSidebar">
+            <a class="dropdown-item" data-toggle="modal" data-target="#uploadModal">Upload</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" data-toggle="modal" data-target="#createTxtModal">Create text file</a>
+            <a *ngIf="isItHomeFolder()" class="dropdown-item" href="" data-toggle="modal"
+               data-target="#createFolderModal">Create Folder</a>
+          </div>
+        </div>
+
+
         <li class="nav-item">
           <a class="nav-link" routerLink="files" routerLinkActive="active">Files <span class="sr-only">(current)</span></a>
         </li>
