Redesigned landing page

--- a/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.html
+++ b/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.html
@@ -8,9 +8,10 @@
 
   <title>CoolDrive</title>
 </head>
-
 <body>
-<!-- TOP NAVBAR -->
+
+
+<div class="background"></div>
 <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top">
   <!-- Brandname and collapse button when navbar is closed -->
   <div class="navbar-header">
@@ -31,47 +32,78 @@
     <!-- navbar right align -->
     <ul class="nav navbar-nav navbar-right">
       <div>
-        <a href="/login"><button type="button" class="btn btn-outline-success">Login</button></a>
-        <a href="/register"><button type="button" class="btn btn-outline-primary">Register</button></a>
+        <a href="/login">
+          <button type="button" class="btn btn-outline-success">Login</button>
+        </a>
+        <a href="/register">
+          <button type="button" class="btn btn-outline-primary">Register</button>
+        </a>
       </div>
     </ul>
   </div>
 </nav>
+<div class="content">
 
-
-<!-- Left navigation menu -->
-<div class="container-fluid">
-    <!-- PAGE BODY THIS IS WHERE YOU LOAD YOUR STUFF -->
-    <main id="mainContent">
-
-      <div class="jumbotron">
-        <div class="card-group">
-          <div class="card">
-            <div class="card-block">
-              <img class="card-img-top" src="https://www.victrex.com/~/media/images/infographics/fp-lightweight-feather.png" alt="Card image cap">
-              <h4 class="card-title">Lightweight</h4>
-              <p class="card-text">Can be run on weak servers, optimalization was important for us!</p>
-            </div>
+  <div class="row">
+    <div class="col-md-10 col-sm-12 lightweight">
+      <div class="card-group mb-0">
+        <div class="card p-4">
+          <div class="card-block text-center">
+            <h1 class="text-left"><p>Lightweight</p></h1>
+            <img src="https://www.victrex.com/~/media/images/infographics/fp-lightweight-feather.png"
+                 alt="Lightweight image">
           </div>
-          <div class="card">
-            <div class="card-block">
-              <img class="card-img-top" style="margin-bottom: 80px" src="https://pix-media.priceonomics-media.com/blog/329/freemium.jpg" alt="Card image cap">
-              <h4 class="card-title">Freemium</h4>
-              <p class="card-text">It is free to use, but there are options to buy more storage</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-block">
-              <img class="card-img-top" src="http://media.boingboing.net/wp-content/uploads/2016/01/online_payment-2.jpg" alt="Card image cap">
-              <h4 class="card-title">PayPal</h4>
-              <p class="card-text">We integrated the most popular online payment system</p>
+        </div>
+        <div class="card py-5">
+          <div class="card-block text-center">
+            <div>
+              <h3><p>Can be run on weak servers, optimalization was important for us!</p></h3>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
 
-    </main>
+  <div class="row">
+    <div class="col-md-10 col-sm-12 lightweight">
+      <div class="card-group mb-0">
+        <div class="card p-4">
+          <div class="card-block text-center">
+            <h1 class="text-left"><p>Free</p></h1>
+            <img src="https://pix-media.priceonomics-media.com/blog/329/freemium.jpg" alt="Freemium image">
+          </div>
+        </div>
+        <div class="card py-5">
+          <div class="card-block text-center">
+            <div>
+              <h3><p>It is free to use, but there are options to buy more storage.</p></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-10 col-sm-12 lightweight">
+      <div class="card-group mb-0">
+        <div class="card p-4">
+          <div class="card-block text-center">
+            <h1 class="text-left"><p>Paypal</p></h1>
+            <img src="http://www.pikespeakwomenshockey.org/wp-content/uploads/2015/10/PayPal-logo.png"
+                 alt="Paypal logo">
+          </div>
+        </div>
+        <div class="card py-5">
+          <div class="card-block text-center">
+            <div>
+              <h3><p>We integrated the most popular online payment system!</p></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
-</html>
-
