--- a/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.css
+++ b/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.css
@@ -1,79 +1,64 @@
 
-h1 {
-  margin-bottom: 20px;
-  padding-bottom: 9px;
-  border-bottom: 1px solid #eee;
-}
-
-.jumbotron{
-  padding-top: 80px;
-}
-
-.card-title{
-  font-weight: bold;
-  text-align: center;
-}
-
-.card-img-top{
-  align-content: center;
-  max-width: 256px;
-}
-
-.navbar-nav>li>a{
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.navbar-toggle{
-  right: 10px;
-}
-
-@media (min-width: 768px){
-  .navbar-toggleable-md {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-
-  .navbar-collapse {
-    width: 100%;
-    border-top: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-}
-
-.page-body{
-  margin-top: 60px;
-}
-
-
-.navbar {
+.background {
+  background: url("../../../assets/sroom.jpg") no-repeat center center fixed;
+  background-size: cover;
+  height: 100vh;
+  display: block;
+  left: 0;
+  right: 0;
   position: fixed;
-  padding-top: 5px;
+  z-index: 1;
+  filter: blur(2px);
 }
 
-.sidebar .nav-item {
-  width: 100%;
+.lightweight {
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+  padding: 20px;
+  margin: auto;
 }
 
-.sidebar .nav-item + .nav-item {
-  margin-left: 0;
+.content {
+  /*box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);*/
+  left: 0;
+  position: absolute;
+  right: 0;
+  z-index: 2;
 }
 
-.sidebar .nav-link {
-  border-radius: 0;
+.card {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.dropdown-item{
-  cursor: pointer;
+.card-text {
+  color: #fff;
+  padding: 10px;
 }
+
+.title {
+  padding: 10px;
+  top: 0px;
+  margin: 0px;
+  margin-bottom: 60px;
+  background-color: black;
+}
+
+h1 {
+  margin: 0;
+  color: #ffffff;
+}
+
+h2 {
+  color: #fff;
+}
+
+h3 {
+  color: #fff;
+}
+
+img {
+  height: 50%;
+  width: 50%;
+  margin: auto;
+}
+
