Fixed Login page responsiveness issue

--- a/src/angular/cooldrive/src/app/components/login/login.component.html
+++ b/src/angular/cooldrive/src/app/components/login/login.component.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card card-inverse card-primary py-5 d-md-down-none" style="width:44%">
+                    <div class="card card-inverse card-primary py-5 d-md-down-none">
                         <div class="card-block text-center">
                             <div>
                                 <h2>Sign up</h2>
