--- a/src/angular/cooldrive/src/app/components/maintenance/transactionlist.component.html
+++ b/src/angular/cooldrive/src/app/components/maintenance/transactionlist.component.html
@@ -55,3 +55,8 @@
     </div>
   </div>
 </div>
+<div class="col-md-10 col-sm-12 center" *ngIf="!isResult" >
+  <div class="alert alert-info info" role="alert">
+    <h3 style="margin: auto">No match found!</h3>
+  </div>
+</div>
