CoolDrive logo now redirects to files page

--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top">
   <!-- Brandname and collapse button when navbar is closed -->
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">CoolDrive</a>
+    <a class="navbar-brand" (click)="goToFilesPage()"><p class="logo">CoolDrive</p></a>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavbar">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
