--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.css
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.css
@@ -5,6 +5,11 @@ h1 {
   border-bottom: 1px solid #eee;
 }
 
+.logo{
+  color: #e4e5e6;
+  cursor: pointer;
+}
+
 .navbar-nav>li>a{
   padding-top: 0px;
   padding-bottom: 0px;
