--- a/src/angular/cooldrive/src/app/components/payment/payment.component.html
+++ b/src/angular/cooldrive/src/app/components/payment/payment.component.html
@@ -12,31 +12,32 @@
 <div class="row">
     <div class="col-sm-8 col-md-6">
         <h3>Credit card:</h3>
+        <form>
         <div class="input-group">
             <span class="input-group-addon fixed-size">Card owner name: </span>
-            <input type="text" class="form-control" id="ownerField" placeholder="Owner Name" [(ngModel)]="cardOwner">
+            <input type="text" name="owner" class="form-control" id="ownerField" placeholder="Owner Name" [(ngModel)]="cardOwner">
         </div>
 
         <div class="input-group">
             <span class="input-group-addon fixed-size">Card number: </span>
-            <input type="text" class="form-control" id="numberField" placeholder="Card number" [(ngModel)]="cardNumber">
+            <input type="number" name="cnumber" class="form-control" id="numberField" placeholder="Card number" [(ngModel)]="cardNumber">
         </div>
 
         <div class="input-group">
-            <span class="input-group-addon fixed-size">Expiration date: </span>
-            <input type="text" class="form-control" id="expDateField" placeholder="date(mm/yy), eg: 08/19" [(ngModel)]="expiration">
+          <span class="input-group-addon fixed-size">Expiration date: </span>
+          <input type="text" name="expdate" class="form-control" id="expDateField" placeholder="Expiration date ex: (18/08)" [(ngModel)]="expiration">
         </div>
-
         <div class="input-group">
             <span class="input-group-addon fixed-size">CVT code: </span>
-            <input type="text" class="form-control" id="cvtField" placeholder="3 number on the back of your card." [(ngModel)]="cvt">
+            <input type="number" name="cvt" maxlength="3" class="form-control" id="cvtField" placeholder="3 number on the back of your card." [(ngModel)]="cvt">
         </div>
         <br>
         <div class="btn-group text-center" role="group">
                 <button  type="button" (click)="payWithCard(formValid())" class="btn btn-primary orderbutton">Pay with Card</button>
         </div>
-    </div> 
-    
+        </form>
+    </div>
+
     <div class="col-sm-8 col-md-6">
         <h3>Paypal:</h3>
         <div id="paypal-button-container"></div>
@@ -44,3 +45,4 @@
     </div>
 
 </div>
+
