--- a/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.css
+++ b/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.css
@@ -11,11 +11,22 @@
   filter: blur(2px);
 }
 
+.carousel-caption{
+  bottom: -30px;
+  position: relative;
+  left: auto;
+  right: auto;
+}
+.carousel-indicators{
+  bottom: -70px;
+}
+
 .lightweight {
   background-color: rgba(0, 0, 0, 0.4);
   border-radius: 2px;
   padding: 20px;
   margin: auto;
+  padding-bottom: 80px;
 }
 
 .content {
@@ -24,6 +35,7 @@
   position: absolute;
   right: 0;
   z-index: 2;
+  padding-bottom: 30px;
 }
 
 .card {
@@ -57,8 +69,8 @@ h3 {
 }
 
 img {
-  height: 50%;
-  width: 50%;
+  height: 250px;
+  width: auto;
   margin: auto;
 }
 
