--- a/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.html
+++ b/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.html
@@ -9,8 +9,6 @@
   <title>CoolDrive</title>
 </head>
 <body>
-
-
 <div class="background"></div>
 <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top">
   <!-- Brandname and collapse button when navbar is closed -->
@@ -42,8 +40,9 @@
     </ul>
   </div>
 </nav>
-<div class="content">
 
+<div class="content">
+  <!--
   <div class="row">
     <div class="col-md-10 col-sm-12 lightweight">
       <div class="card-group mb-0">
@@ -105,5 +104,56 @@
       </div>
     </div>
   </div>
+  -->
+  <div class="row lightweight">
+    <div class="col-md-12 col-sm-10">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <br><br>
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img class="d-block img-fluid"
+                 src="https://www.victrex.com/~/media/images/infographics/fp-lightweight-feather.png" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Lightweight</h3>
+              <p>Can be run on weak servers, optimalization was important for us!</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block img-fluid" src="https://qph.ec.quoracdn.net/main-qimg-22064405d56259eac7966da4f5068177"
+                 alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Free</h3>
+              <p>It is free to use, but there are options to buy more storage.</p>
+            </div>
+
+          </div>
+          <div class="carousel-item">
+            <img class="d-block img-fluid"
+                 src="http://www.pikespeakwomenshockey.org/wp-content/uploads/2015/10/PayPal-logo.png"
+                 alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Paypal</h3>
+              <p>We integrated the most popular online payment system!</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
+
 </body>
+</html>
